--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -45,6 +45,15 @@ $baseLineHeight: 1.4;
 $baseWidth: 995px;
 $ftrHeight:135px;
 
+@mixin respond-to($media) {
+  @if $media == lower_1024 {
+    @media only screen and (max-width: 1024px) { @content; }
+  }
+}
+
+
+
+
 /*HELPER CLASSES
 ---------------------------------------------------------*/
 //floats
@@ -326,7 +335,7 @@ body {
       top:50%;
       margin-top: -11px;
     }
-    &:hover{
+    &:hover,&:focus,&.active{
       &:before{display: none;}
       background-color: rgb(214,172,24);
       @include filter-gradient(#d6ac18, #f8e877, vertical);
@@ -452,10 +461,7 @@ body {
   tbody{
     tr{
       &:nth-child(even) td{background: #f4f4f4;}
-      &:hover td{
-        background: #bababa;
-        &:first-child{padding-left: 30px;}
-      }
+      //&:hover td{background: #bababa;}
       &:last-child td{
         &:first-child{@include border-radius(0 0 0 15px);}
         &:last-child{@include border-radius(0 0 15px 0);}
@@ -467,21 +473,37 @@ body {
       @include single-transition(all,.4s,ease,0s);
       color:$titleColor;
       text-align: center;
+      line-height: 2;
+      padding:5px 0;
       &:first-child{
+        padding:0;
         text-align: left;
-        padding-left: 20px;
         border-left: 1px solid #e1e1e1;
       }
       &:last-child{
         font:bold 14px $baseFontFamily;
         border-right: 1px solid #e1e1e1;
       }
-      padding:5px 0;
+    }
+    .b-counter{
+      text-align: center; @include hList;
+      .control{
+        width:20px;
+        height: 20px;
+        line-height: 17px;
+        font-size: 15px;
+        @include inline-block;
+      }
+      .control__plus{padding:0;}
     }
   }
   tfoot td{
     padding-top:10px;
     font: italic 13px $baseFontFamily;
+  }
+  .name{
+    //height: 100%;
+    padding:5px 0;
   }
 }
 /*PRODUCT page specific elements styles
@@ -507,7 +529,34 @@ body {
   li:first-child .item{@include border-radius(15px 0 0 15px);}
   li:last-child-child .item{@include border-radius(0 15px 15px 0);}
 }
-
+.b-product__content__price{
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 1;
+  color:$linkDefaultColor;
+  position: absolute;
+  bottom:80px;
+  left:73px;
+  &:after{
+    content: 'руб';
+    display: block;
+    text-align: right;
+  }
+}
+.b-product__variations__price{
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 1;
+  color:$linkDefaultColor;
+  position: absolute;
+  bottom:45px;
+  right:5px;
+  &:after{
+    content: 'руб';
+    display: block;
+    text-align: right;
+  }
+}
 .b-product__content{
   .title{
     color:$titleColor;
@@ -647,13 +696,49 @@ body {
 /*VIDGETS-----
 */
 .b-adressVidget{
-  position: fixed;
-  left:77%;
-  left: -webkit-calc(50% + 515px);
-  left: -moz-calc(50% + 515px);
-  left: calc(50% + 515px);
+  position: absolute;
+  right: 0;
+  //left:77%;
+  //left: -webkit-calc(50% + 515px);
+  //left: -moz-calc(50% + 515px);
+  //left: calc(50% + 515px);
   top:20px;
   width:240px;
+  .trigger{
+    position: absolute;
+    right:0;
+    top:0;
+    display: block;
+    width:64px;
+    height: 64px;
+    background-image: url("../images/convertedToData/phone-1.png");
+    background-repeat: no-repeat;
+    @include respond-to(lower_1024){
+      width:48px;
+      height: 48px;
+      background-image: url("../images/convertedToData/phone-2.png");
+    }
+  }
+  .close{
+    background-color: rgb(235,111,109);
+    @include filter-gradient(#eb6f6d, #fc7775, vertical);
+    @include background-image(linear-gradient(top,  rgba(235,111,109,1) 0%,rgba(237,112,110,1) 21%,rgba(251,119,117,1) 71%,rgba(252,119,117,1) 100%));
+    @include ie9-gradient-support;
+    color:#fff;
+    padding:2px 5px 3px;
+    position: absolute;
+    right:5px;
+    top:5px;
+    @include border-radius(50%);
+    font-weight: bold;
+    text-decoration: none;
+  }
+  .content{
+    display: none;
+    @include vidget-bg;
+    @include border-radius(15px);
+    padding:10px;
+  }
   .b-phone{
     @include hList;
     .title{
@@ -671,15 +756,48 @@ body {
 
 .b-shopcartVidget{
   position: fixed;
-  left:77%;
-  left: -webkit-calc(50% + 515px);
-  left: -moz-calc(50% + 515px);
-  left: calc(50% + 515px);
-  top:290px;
+  right:0;
+  //left:77%;
+  //left: -webkit-calc(50% + 515px);
+  //left: -moz-calc(50% + 515px);
+  //left: calc(50% + 515px);
+  top:220px;
   width:250px;
-  @include vidget-bg;
-  @include border-radius(15px);
-  padding:5px;
+  .trigger{
+    position: absolute;
+    right:5px;
+    top:0;
+    display: block;
+    width:64px;
+    height: 64px;
+    background-image: url("../images/convertedToData/cart-1.png");
+    background-repeat: no-repeat;
+    @include respond-to(lower_1024){
+      width:48px;
+      height: 48px;
+      background-image: url("../images/convertedToData/cart-2.png");
+    }
+  }
+  .close{
+    background-color: rgb(235,111,109);
+    @include filter-gradient(#eb6f6d, #fc7775, vertical);
+    @include background-image(linear-gradient(top,  rgba(235,111,109,1) 0%,rgba(237,112,110,1) 21%,rgba(251,119,117,1) 71%,rgba(252,119,117,1) 100%));
+    @include ie9-gradient-support;
+    color:#fff;
+    padding:2px 5px 3px;
+    position: absolute;
+    right:5px;
+    top:5px;
+    @include border-radius(50%);
+    font-weight: bold;
+    text-decoration: none;
+  }
+  .content{
+    display: none;
+    @include vidget-bg;
+    @include border-radius(15px);
+    padding:30px 5px 5px;
+  }
   .search{
     position: relative;
     input{
@@ -726,7 +844,9 @@ body {
       &:first-child{text-align: left;}
       &:last-child{border-right: none;}
     }
-    .name{font-size: 9px;display: block;white-space:nowrap;}
+    .name{
+      font-size: 9px;display: block;white-space:nowrap;
+    }
     .price, .sum{
       font-size: 10px;
       b{font-size: $baseFontSize; color:#202020;}
@@ -777,3 +897,68 @@ body {
 //* * * * * * { outline: 1px solid green; }
 //* * * * * * * { outline: 1px solid orange; }
 //* * * * * * * * { outline: 1px solid blue; }
+.dc-floater .dc-floater-content {
+  overflow: hidden;
+}
+.dc-floater .tab {
+  background: url(../images/tab_black.png) no-repeat 0 -40px;
+  font: bold 12px Arial, sans-serif;
+  color: #fff;
+  height: 40px;
+  padding: 0 0 0 10px;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+.dc-floater .tab span {
+  display: block;
+  background: url(../images/tab_black.png) no-repeat 100% 0;
+  padding: 14px 14px 14px 5px;
+  height: 12px;
+  line-height: 1em;
+}
+/* Plugin adds class "active" to open tab */
+.dc-floater.active .tab {
+  background-position: 0 -120px;
+}
+.dc-floater.active .tab span {
+  background-position: 100% -80px;
+}
+
+.dc-floater .dc-corner {
+  background: url(../images/tab_black.png) no-repeat 0 -190px;
+  height: 10px;
+  padding: 0 0 0 10px;
+}
+.dc-floater .dc-corner span {
+  display: block;
+  background: url(../images/tab_black.png) no-repeat 100% -230px;
+  padding: 0;
+  height: 10px;
+}
+/* Plugin adds class "bottom" to floating tabs with location "bottom" */
+.dc-floater.bottom.active .tab {
+  background-position: 0 -160px;
+}
+.dc-floater.bottom.active .tab span {
+  background-position: 100% -200px;
+}
+
+.dc-floater.bottom .dc-corner {
+  background-position: 0 -120px;
+}
+.dc-floater.bottom .dc-corner span {
+  background-position: 100% -80px;
+}
+
+.dc-floater .dc-floater-content .nav-main, .dc-floater .dc-floater-content ul, .dc-floater .dc-floater-content li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.dc-floater .dc-floater-content .nav-main {
+  background: #000;
+  padding: 0 10px;
+  line-height: 1.5em;
+  font-size: 12px;
+}
+.one{border:solid;}
